Add instructions for running with Mercury

--- a/notebooks/azel-frames-histograms.ipynb
+++ b/notebooks/azel-frames-histograms.ipynb
@@ -34,6 +34,32 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "37387bf6-bdb3-40fa-b59a-c3af69b62844",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Running with Mercury to get an interactive web app needs\n",
+    "# (only)\n",
+    "\n",
+    "# requirements.txt\n",
+    "# mercury\n",
+    "# numpy\n",
+    "# matplotlib\n",
+    "\n",
+    "# install via 'pip install -r requirements.txt' into a clear virtual env\n",
+    "# tested with python 3.10\n",
+    "\n",
+    "# Then you need the two SQlite databases\n",
+    "#   observations_lite.db   (370 MB)\n",
+    "#   demoddata_lite.db      (2.7 GB)\n",
+    "# Happy to provide these, but please contact me to get them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "eb9c0783-7200-41b9-8410-02f0e13b5bb2",
    "metadata": {
     "tags": []
@@ -47,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cdfdea99-b6b2-454c-b6e9-dfc7ee6de139",
    "metadata": {
     "tags": []
@@ -55,9 +81,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 834.0,\n    \"min\": 0.0,\n    \"max\": 4000.0,\n    \"step\": 1.0,\n    \"label\": \"Ground station number\",\n    \"model_id\": \"6a7cab5889ef49229933a6f8350bf4a8\",\n    \"code_uid\": \"Numeric.0.40.26.1-randb2051840\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 834.0,\n    \"min\": 0.0,\n    \"max\": 4000.0,\n    \"step\": 1.0,\n    \"label\": \"Ground station number\",\n    \"model_id\": \"630ecb0d3032412fac7b9756f3587ab7\",\n    \"code_uid\": \"Numeric.0.40.26.1-randbbeda2de\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a7cab5889ef49229933a6f8350bf4a8",
+       "model_id": "630ecb0d3032412fac7b9756f3587ab7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d02c4bb9-2b95-4531-a608-ea59eb8aa5c9",
    "metadata": {
     "tags": []
@@ -84,9 +110,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"2023-01-01\",\n    \"rows\": 1,\n    \"label\": \"Start date\",\n    \"model_id\": \"d2ae55d029c1478aa5ef5f625734862e\",\n    \"code_uid\": \"Text.0.40.15.1-rand525eeb51\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"2023-01-01\",\n    \"rows\": 1,\n    \"label\": \"Start date\",\n    \"model_id\": \"555e87cb56e246e69579895951e03f0e\",\n    \"code_uid\": \"Text.0.40.15.1-rand020b4818\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2ae55d029c1478aa5ef5f625734862e",
+       "model_id": "555e87cb56e246e69579895951e03f0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,9 +125,9 @@
     },
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"now\",\n    \"rows\": 1,\n    \"label\": \"End date\",\n    \"model_id\": \"fd64e3553e6941c9ae1fa321b7210256\",\n    \"code_uid\": \"Text.0.40.15.2-randc6682e63\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"now\",\n    \"rows\": 1,\n    \"label\": \"End date\",\n    \"model_id\": \"d0b957b7804740e1a1ea765d8220a8fb\",\n    \"code_uid\": \"Text.0.40.15.2-randbbca6250\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd64e3553e6941c9ae1fa321b7210256",
+       "model_id": "d0b957b7804740e1a1ea765d8220a8fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "17eb7eb8-d15f-43c0-96d9-62527d473989",
    "metadata": {
     "tags": []
@@ -164,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9de0a21a-b5a5-4869-8d13-62f1c1cba5ce",
    "metadata": {
     "tags": []
@@ -200,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f8ecca5c-67d8-4c68-9607-bd1eee7b186d",
    "metadata": {},
    "outputs": [
@@ -213,7 +239,7 @@
        "[Ground station # 834](https://network.satnogs.org/stations/834)\n",
        "\n",
        "- Start: 2023-01-01\n",
-       "- End: 2023-07-17 17:34:46.542667\n",
+       "- End: 2023-07-17 17:47:41.445010\n",
        "\n",
        "108,949 frames\n"
       ],
@@ -240,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "93e2ea4c-b1ed-4687-9a98-14289aabfbd0",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"OutputDir\",\n    \"model_id\": \"output-dir\",\n    \"code_uid\": \"OutputDir.0.40.18.2-rand853bfa64\"\n}",
+      "application/mercury+json": "{\n    \"widget\": \"OutputDir\",\n    \"model_id\": \"output-dir\",\n    \"code_uid\": \"OutputDir.0.40.18.2-randcd4cfb9b\"\n}",
       "text/html": [
        "<h3>Output Directory</h3><small>This output won't appear in the web app.</small>"
       ],
@@ -273,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e0246a3a-34c2-4c0b-bab4-0e8c1c382a60",
    "metadata": {
     "tags": []
@@ -312,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "01e7b4e6-3c14-4bc5-ad77-0bd86eb5f784",
    "metadata": {
     "tags": []
@@ -351,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8c2c27d0-22c2-4eed-b853-de35424f1b6b",
    "metadata": {
     "tags": []
@@ -376,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5661ec56-528a-4402-bdbc-a906cce7635b",
    "metadata": {},
    "outputs": [
@@ -465,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "648a311f-3a6e-4c82-92e5-c64f50525896",
    "metadata": {
     "tags": []
@@ -473,9 +499,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 30.0,\n    \"min\": 0.0,\n    \"max\": 90.0,\n    \"step\": 1.0,\n    \"label\": \"Max elevation for AZ histogram\",\n    \"model_id\": \"1e857276740b464f9081e39576ea6b1f\",\n    \"code_uid\": \"Numeric.0.40.26.1-rand757e7cf7\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 30.0,\n    \"min\": 0.0,\n    \"max\": 90.0,\n    \"step\": 1.0,\n    \"label\": \"Max elevation for AZ histogram\",\n    \"model_id\": \"c722334bd4fa482cad59b8ed597ece45\",\n    \"code_uid\": \"Numeric.0.40.26.1-rand48ed808a\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e857276740b464f9081e39576ea6b1f",
+       "model_id": "c722334bd4fa482cad59b8ed597ece45",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "a0ff6c3c-85e7-43a2-ac64-5d503a99616f",
    "metadata": {
     "tags": []
@@ -505,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "6b3976a2-a5e5-4f74-bee8-81ff07243644",
    "metadata": {
     "tags": []
@@ -517,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "974fe58a-1524-43aa-a45a-e8d9b89683a9",
    "metadata": {
     "tags": []
@@ -548,10 +574,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d890406a-4c48-45e3-88b3-5b71ba4ec58b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "## Download images\n",
+       "\n",
+       "The plots are available for you to download!\n",
+       "\n",
+       "Select the \"**Output Files** icon on the left side bar.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mr.Markdown('''\n",
     "## Download images\n",
