Add link to source

--- a/notebooks/azel-frames-histograms.ipynb
+++ b/notebooks/azel-frames-histograms.ipynb
@@ -81,9 +81,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 834.0,\n    \"min\": 0.0,\n    \"max\": 4000.0,\n    \"step\": 1.0,\n    \"label\": \"Ground station number\",\n    \"model_id\": \"630ecb0d3032412fac7b9756f3587ab7\",\n    \"code_uid\": \"Numeric.0.40.26.1-randbbeda2de\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 834.0,\n    \"min\": 0.0,\n    \"max\": 4000.0,\n    \"step\": 1.0,\n    \"label\": \"Ground station number\",\n    \"model_id\": \"ea4eb2e4cb7b43c58d803c051946d688\",\n    \"code_uid\": \"Numeric.0.40.26.1-rand34c93d6a\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "630ecb0d3032412fac7b9756f3587ab7",
+       "model_id": "ea4eb2e4cb7b43c58d803c051946d688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,9 +110,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"2023-01-01\",\n    \"rows\": 1,\n    \"label\": \"Start date\",\n    \"model_id\": \"555e87cb56e246e69579895951e03f0e\",\n    \"code_uid\": \"Text.0.40.15.1-rand020b4818\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"2023-01-01\",\n    \"rows\": 1,\n    \"label\": \"Start date\",\n    \"model_id\": \"a728abd2a15e49989db8b23620414173\",\n    \"code_uid\": \"Text.0.40.15.1-rand75bd441e\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "555e87cb56e246e69579895951e03f0e",
+       "model_id": "a728abd2a15e49989db8b23620414173",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,9 +125,9 @@
     },
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"now\",\n    \"rows\": 1,\n    \"label\": \"End date\",\n    \"model_id\": \"d0b957b7804740e1a1ea765d8220a8fb\",\n    \"code_uid\": \"Text.0.40.15.2-randbbca6250\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Text\",\n    \"value\": \"now\",\n    \"rows\": 1,\n    \"label\": \"End date\",\n    \"model_id\": \"1a0a99194f9d49df9556f6cab54e1e8a\",\n    \"code_uid\": \"Text.0.40.15.2-rand4d7d8692\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0b957b7804740e1a1ea765d8220a8fb",
+       "model_id": "1a0a99194f9d49df9556f6cab54e1e8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,10 +236,15 @@
        "\n",
        "## Information\n",
        "\n",
-       "[Ground station # 834](https://network.satnogs.org/stations/834)\n",
+       "Source code for this app may be found at:\n",
+       "\n",
+       "https://github.com/wiredlab/scheduling-bazaar/blob/master/notebooks/azel-frames-histograms.ipynb\n",
+       "\n",
+       "\n",
+       "## [Ground station # 834](https://network.satnogs.org/stations/834) stats\n",
        "\n",
        "- Start: 2023-01-01\n",
-       "- End: 2023-07-17 17:47:41.445010\n",
+       "- End: 2023-07-17 18:01:14.988433\n",
        "\n",
        "108,949 frames\n"
       ],
@@ -255,7 +260,12 @@
     "mr.Markdown(f\"\"\"\n",
     "## Information\n",
     "\n",
-    "[Ground station # {ground_station}](https://network.satnogs.org/stations/{ground_station})\n",
+    "Source code for this app may be found at:\n",
+    "\n",
+    "https://github.com/wiredlab/scheduling-bazaar/blob/master/notebooks/azel-frames-histograms.ipynb\n",
+    "\n",
+    "\n",
+    "## [Ground station # {ground_station}](https://network.satnogs.org/stations/{ground_station}) stats\n",
     "\n",
     "- Start: {date_start}\n",
     "- End: {date_end}\n",
@@ -272,7 +282,7 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"OutputDir\",\n    \"model_id\": \"output-dir\",\n    \"code_uid\": \"OutputDir.0.40.18.2-randcd4cfb9b\"\n}",
+      "application/mercury+json": "{\n    \"widget\": \"OutputDir\",\n    \"model_id\": \"output-dir\",\n    \"code_uid\": \"OutputDir.0.40.18.2-randed05f035\"\n}",
       "text/html": [
        "<h3>Output Directory</h3><small>This output won't appear in the web app.</small>"
       ],
@@ -499,9 +509,9 @@
    "outputs": [
     {
      "data": {
-      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 30.0,\n    \"min\": 0.0,\n    \"max\": 90.0,\n    \"step\": 1.0,\n    \"label\": \"Max elevation for AZ histogram\",\n    \"model_id\": \"c722334bd4fa482cad59b8ed597ece45\",\n    \"code_uid\": \"Numeric.0.40.26.1-rand48ed808a\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
+      "application/mercury+json": "{\n    \"widget\": \"Numeric\",\n    \"value\": 30.0,\n    \"min\": 0.0,\n    \"max\": 90.0,\n    \"step\": 1.0,\n    \"label\": \"Max elevation for AZ histogram\",\n    \"model_id\": \"02bd34420230447aaa685f02d742c5ec\",\n    \"code_uid\": \"Numeric.0.40.26.1-randf2dfa20a\",\n    \"url_key\": \"\",\n    \"disabled\": false,\n    \"hidden\": false\n}",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c722334bd4fa482cad59b8ed597ece45",
+       "model_id": "02bd34420230447aaa685f02d742c5ec",
        "version_major": 2,
        "version_minor": 0
       },
